# sipXtapi

./: .travis.yml  Android.mk  COPYING  ChangeLog  INSTALL  LICENSE.txt  Makefile.am  Makefile.gnu  Makefile.in  README  RELEASE-PROCESS.txt  SIPxua.vpw  TODO  ant-targets.am  ant-targets.xml  build  build.properties.in  build.xml  build_evc4.bat  buildmsvs6.bat  config.properties.in  configure.ac  configure.patch  dependencies  dependencies.mak  gips-mediaprocessing-msvc71.sln  lib.properties  msvs6build.bat  profilepub_sipagent.dsp  readme.txt  sipX-msvc16.sln  sipX-msvc17.sln  sipX-msvc8.sln  sipXauthproxy.dsp  sipXforkingProxy.dsp  sipXtapi-msvc71.sln  sipx-jboss-configure.patch  sipx-mediaprocessing-msvc71.sln  sipxbuild  sipxconfig.spec.in  (+6 more)
bbridge/: Makefile.am  bbridge.example-conf  bbridge.sln  bbridge.spec.in  bbridge.vcproj  configure.ac
bbridge/doc/: BostonBridgeConfiguration.txt  Makefile.am  RemoteAdmissionControl.txt  footer.html
bbridge/etc/: bbridge.conf
bbridge/src/: Conference.cpp  Conference.h  ConferenceSubscriptionApp.cpp  ConferenceSubscriptionApp.h  ConferenceUserAgent.cpp  ConferenceUserAgent.h  DtmfEvent.cpp  DtmfEvent.h  Makefile  Makefile.MANUAL  Makefile.am  Participant.cpp  Participant.h  ParticipantFactory.cpp  ParticipantFactory.h  Subsystem.cpp  Subsystem.h  bbridge.cpp  bbridge.h  main.example  tones.cpp
lib/: Makefile.am  Makefile.in  configure.ac  dependencies.mak  spring-beans-1.1.3.dtd  tapestry-3.0.1.tld
lib/cgicc/: Makefile  Makefile.am  README  configure.ac
lib/cppunit/: Makefile  Makefile.am
lib/freeswitch/: Makefile.am  freeswitch-nonroot.spec  freeswitch.spec  freeswitch_conf.patch
lib/freeswitch-conf/: Makefile.am  configure.ac  files.list  sipXfreeswitch.spec
lib/java-ibm/: Makefile  Makefile.am  configure.ac
lib/java-sun/: Makefile  Makefile.am  (+1 more)
resiprocateLib/: INSTALL  Makefile.am  configure.ac
sipXcallLib/: .gitignore  Android.mk  ChangeLog  INSTALL  Makefile.am  TODO  acsite.m4  configure.ac  resource.h  sipXcallLib-msvc16.vcxproj  sipXcallLib-msvc16.vcxproj.filters  sipXcallLib-msvc17.vcxproj  sipXcallLib-msvc17.vcxproj.filters  sipXcallLib-msvc71.sln  sipXcallLib-msvc71.vcproj  sipXcallLib-msvc8.vcproj  sipXcallLib.dsp  sipXcallLib.vcp  sipXcallLib.vcproj  sipXcallLib.vcxproj  sipXcallLib.vpj  sipXcallLibTest-msvc16.vcxproj  sipXcallLibTest-msvc16.vcxproj.filters  sipXcallLibTest-msvc17.vcxproj  sipXcallLibTest-msvc17.vcxproj.filters  sipXcallLibTest-msvc71.vcproj  sipXcallLibTest-msvc8.vcproj  sipXcallLibTest.dsp  sipXcallLibTest.vcp  sipXtapi-msvc16.vcxproj  sipXtapi-msvc16.vcxproj.filters  sipXtapi-msvc17.vcxproj  sipXtapi-msvc17.vcxproj.filters  sipXtapi-msvc71.vcproj  sipXtapi-msvc8.vcproj  sipXtapi.def  sipXtapi.dsp  sipXtapi.dsw  sipXtapi.rc  sipXtapi.sln  (+13 more)
sipXcommserverLib/: INSTALL  Makefile.am  configure.ac  sipXcommserverLib.dsp  sipXcommserverLib.vcproj  sipdbtest.dsp  sipxcommserverlib.spec.in
sipXconfig/: .classpath  .project  ChangeLog  INSTALL  Makefile.am  README  TODO  ant-targets.am  ant-targets.xml  build.properties.in  build.xml  config.properties.in  configure.ac  dependencies.xml  lib.properties  sipx-jboss-configure.patch  sipxconfig.spec.in  subant-targets.xml
sipXmediaAdapterLib/: .gitignore  Android.mk  Makefile.am  configure.ac  sipXmediaAdapterLib-msvc16.vcxproj  sipXmediaAdapterLib-msvc16.vcxproj.filters  sipXmediaAdapterLib-msvc17.vcxproj  sipXmediaAdapterLib-msvc17.vcxproj.filters  sipXmediaAdapterLib-msvc8.vcproj  sipXmediaAdapterLib.dsp  sipXmediaAdapterLib.vcp  sipXmediaAdapterLib.vcproj  sipXmediaAdapterLib.vcxproj  sipXmediaAdapterLibTest-msvc16.vcxproj  sipXmediaAdapterLibTest-msvc16.vcxproj.filters  sipXmediaAdapterLibTest-msvc17.vcxproj  sipXmediaAdapterLibTest-msvc17.vcxproj.filters  sipXmediaAdapterLibTest-msvc8.vcproj  sipXmediaAdapterLibTest.dsp  sipXmediaAdapterLibTest.sln  sipXmediaAdapterLibTest.vcp  sipXmediaAdapterLibTest.vcproj  sipXmediaAdapterLibTest.vcxproj  sipxmediaadapterlib.spec.in
sipXmediaLib/: .gitignore  Android.mk  ChangeLog  INSTALL  Makefile.am  autoconf259.patch  configure.ac  sipXmediaLib-msvc16.vcxproj  sipXmediaLib-msvc17.vcxproj  sipXmediaLib-msvc17.vcxproj.filters  sipXmediaLib-msvc71.sln  sipXmediaLib-msvc71.vcproj  sipXmediaLib-msvc8.vcproj  sipXmediaLib.dsp  sipXmediaLib.rc  sipXmediaLib.vcp  sipXmediaLib.vcproj  sipXmediaLib.vcxproj  sipXmediaLibTest-msvc16.vcxproj  sipXmediaLibTest-msvc17.vcxproj  sipXmediaLibTest-msvc71.vcproj  sipXmediaLibTest-msvc8.vcproj  sipXmediaLibTest.dsp  sipXmediaLibTest.sln  sipXmediaLibTest.vcp  sipXmediaLibTest.vcproj  sipXmediaLibTest.vcxproj  sipxmedialib.spec.in
sipXmediaPluginMgr/: INSTALL  Makefile.am  configure.ac  sipXmediaPluginMgr.vcproj  sipXmediaPluginMgr.vpj
sipXpbx/: ChangeLog  Makefile.am  configure.ac  sipxpbx.spec.in
sipXphone/: ChangeLog  INSTALL  Makefile.am  NEWS  acsite.m4  configure.ac  sipXphone.dsp
sipXportLib/: .gitignore  Android-core.mk  Android.mk  Application.mk  ChangeLog  INSTALL  Makefile.am  README  TODO  acsite.m4  configure.ac  sipXportLib-msvc16.vcxproj  sipXportLib-msvc17.vcxproj  sipXportLib-msvc71.sln  sipXportLib-msvc71.vcproj  sipXportLib-msvc8.vcproj  sipXportLib.dsp  sipXportLib.vcproj  sipXportLib.vcxproj  sipXportLib.vpj  sipXportLibTest-msvc16.vcxproj  sipXportLibTest-msvc17.vcxproj  sipXportLibTest-msvc71.vcproj  sipXportLibTest-msvc8.vcproj  sipXportLibTest.dsp  sipXportLibTest.sln  sipXportLibTest.vcp  sipXportLibTest.vcproj  sipXportLibTest.vcxproj  sipXportLib_NoSecurity.vcproj  sipXportUnitTestLib-msvc16.vcxproj  sipXportUnitTestLib-msvc17.vcxproj  sipXunitTestSuite-msvc16.vcxproj  sipXunitTestSuite-msvc17.vcxproj  sipXunitTestSuite-msvc8.vcproj  sipXunitTestSuite.vcproj  sipxportlib.spec.in
sipXproxy/: LICENSE  Makefile.am  configure.ac  sipXauthproxy.dsp  sipXforkingProxy.dsp  sipxproxy.spec.in
sipXpublisher/: Makefile.am  configure.ac  sipXpublisher.dsp  sipxpublisher.spec.in
sipXregistry/: ChangeLog  Makefile.am  configure.ac  sipXregistry.dsp  sipxregistry.spec.in
sipXrepro/: Makefile.am  README  configure.ac  sipxrepro.spec.in
(+13531 files in other folders)
