

include $(top_srcdir)/config/sipXcommon.mak

EXTRA_DIST = \
  config\sipXpkgtop.mak

unconditional_SUBDIRS = \
  sipXportLib \
  sipXsdpLib \
  sipXtackLib \
  sipXmediaLib \
  sipXmediaAdapterLib \
  sipXcallLib

include $(top_srcdir)/config/sipXpkgtop.mak

SUBDIRS = $(unconditional_SUBDIRS) $(doc_SUBDIRS)


